--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,12 @@ html {
   scroll-behavior: smooth;
 }
 
+@layer components {
+  .nav-icon{
+      @apply w-6 h-6 cursor-pointer   /*to apply tailwindCSS property*/
+  }
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
